Added contact information

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="contact-link float-right">
-        <a href="#contact" class="scrollto">Contact Me</a>
+        <a href="mailto:amir.attoun@protonmail.ch">Contact Me</a>
       </div>
 
     </div>
