--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,6 +67,13 @@
       <div class="copyright">
         &copy; Copyright <strong><span>YNAB Converter</span></strong>.
       </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-coming-soon-template-countdwon/ -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
     </div>
   </footer><!-- End #footer -->
 </body>
