--- a/templates/verify.html
+++ b/templates/verify.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+<section id="hero">
 <div class="hero-container">
     <form method="post" action="/download-file"> <!-- Form to handle data submission -->
         <table>
@@ -57,6 +58,8 @@
         <button type="submit">Save Changes</button>
     </form>
 </div>
+</section>
+
 {% endblock %}
 {% block scripts %}
 <script>
