--- a/templates/error.html
+++ b/templates/error.html
@@ -5,9 +5,11 @@
 {% endblock %}
 
 {% block main %}
+<section id="hero">
 <div class="hero-container">
     <h1>
         {{ message }}
     </h1>
 </div>
+</section>
 {% endblock %}
