--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+<section id="hero">
 <div class="hero-container">
     <h1>Convert Bank Statement</h1>
     <h2>Convert your bank statement to a YNAB compatible format</h2>
@@ -28,4 +29,5 @@
       <div class="text-center"><button type="submit">Upload file!</button></div>
     </form>
   </div>
+</section><!-- End Hero -->
 {% endblock %}
