--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<section id="hero">
+<section class="section-index" id="hero">
 <div class="hero-container">
     <h1>Convert Bank Statement</h1>
     <h2>Convert your bank statement to a YNAB compatible format</h2>
