--- a/templates/verify.html
+++ b/templates/verify.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<section id="hero">
+<section class="section-verify" id="hero">
 <div class="hero-container form-group">
     <form method="post" action="/download-file"> <!-- Form to handle data submission -->
         <table>
