--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -256,8 +256,12 @@ h6,
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
-section {
-  padding: 60px 0;
+.section-index {
+  padding: 300px 0;
+}
+
+.section-verify {
+  padding: 30px 0;
 }
 
 .section-bg {
