--- a/templates/error.html
+++ b/templates/error.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<section id="hero">
+<section class ="section-index" id="hero">
 <div class="hero-container">
     <h1>
         {{ message }}
