--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,9 @@
   <!-- Template Main CSS File -->
   <link href="static/assets/css/style.css" rel="stylesheet">
 
+  <!-- JS -->
+  <script src="static/assets/js/main.js"></script>
+
   <!-- =======================================================
   * Template Name: WeBuild
   * Template URL: https://bootstrapmade.com/free-bootstrap-coming-soon-template-countdwon/
