--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
   <link href="static/assets/css/style.css" rel="stylesheet">
 
   <!-- JS -->
-  <script src="static/assets/js/main.js"></script>
+  <script type="text/javascript" src="static/assets/js/main.js"></script>
 
   <!-- =======================================================
   * Template Name: WeBuild
